--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to My Page</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <nav class="navbar">
+            <div class="logo">Joakim Månsson</div>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="hero">
+        <div class="hero-content">
+            <h1>Welcome to My World</h1>
+            <p>I am [Your Name], and I love creating amazing things. Explore my portfolio and get to know me better!</p>
+            <a href="portfolio.html" class="btn">Explore Portfolio</a>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Joakim Månsson. All rights reserved.</p>
+    </footer>
 </body>
 </html>
